# summarize

./: .cproject  .project  CMakeLists.txt  LogicalStub.cpp  PhysicalStub.cpp  README.md  plugin.cpp
src/: FastCountSettings.h  LogicalFastCount.cpp  LogicalSummarize.cpp  Makefile  PhysicalFastCount.cpp  PhysicalSummarize.cpp  SummarizeSettings.h  plugin.cpp  restart.sh  test.expected  test.out  test.sh
